--- a/index.html
+++ b/index.html
@@ -85,18 +85,21 @@
 
 
 
-    <section class="land image-with-shadow" style="height: 40rem;">
-     <div class="container">
-      <div class="row">
-        <div class="col-md-4 right-side" >
-          <img src="images/logo/logo1.png" alt="" width="650" height="550">
-        </div>
-        <div class="col-md-8 left-side" style="margin: auto;">
-          <p class="paragraph-land">اهلاً بك في منصة الفرعون للاستاذ محمد عادل</p>
-          <p class="paragraph-land">استاذ المواد الفلسفية للثانوية العامة في الإسكندرية</p>
-        </div>
+    <section class="land image-with-shadow" style="height: 38rem;">
+      <div id="land-ani">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 right-side" style="background-color: transparent;">
+              <img id="logo-ani" src="images/logo/logo1.png" alt="" style="width: 100% !important;">
+            </div>
+            <div class="col-md-6 left-side" >
+              <p class="paragraph-land">اهلاً بك في منصة الفرعون للاستاذ محمد عادل</p>
+              <p class="paragraph-land">استاذ المواد الفلسفية للثانوية العامة في الإسكندرية</p>
+            </div>
+          </div>
+         </div>
       </div>
-     </div>
+     
     </section>
 
  
