--- a/ver2/index.html
+++ b/ver2/index.html
@@ -181,7 +181,7 @@
           <div class="col-lg-12 index-defin">
             <h1>منصة فرعون التعليمية</h1>
           <div class="parag">
-            <p>احصل على المساعدة الدراسية التي تحتاجها في لحظات و استمتع بتجربة تعليمية ممتعة و فريدة من نوعها.</p>
+            <p style="text-align:justify;">احصل على المساعدة الدراسية التي تحتاجها في لحظات و استمتع بتجربة تعليمية ممتعة و فريدة من نوعها.</p>
           <p>بخطوات بسيطة بإمكانك الوصول الى اكفاء المدرسين اونلاين ليقوموا بمساعدتك والاجابة على اسئلتك الخاصة بالمنهج الدراسي.</p>
        
           </div>
